--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 						Atlanta's legal new website - Generating 30% more law clients
 						with a refresh
 					</h3>
-					
+
 					<p class="text-center">
 						A few months ago, I created their new website and it's bringing
 						lots of leads.
@@ -322,8 +322,9 @@
 						<div class="col-sm-3">
 							<div class="text-center">
 								<a class="social" href="https://www.Dribble.com">
-									<span class="fa fa-dribbble icon-md"></span></a>
+									<span class="fa fa-dribbble icon-md"></span>
 									<p class="social-color">Dribble</p>
+								</a>
 							</div>
 						</div>
 						<div class="col-sm-3">
