--- a/index.html
+++ b/index.html
@@ -11,34 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
-    <title>GoMikeDesigns | Freelance Web Developper In Atlanta</title>
-
-	<!-- Analytics -->
-	<script
-	async
-	src="https://www.googletagmanager.com/gtag/js?id=G-NNLTWCB64Q"
-	></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-
-	function gtag() {
-	dataLayer.push(arguments);
-	}
-	gtag("js", new Date());
-
-	gtag("config", "G-NNLTWCB64Q");
-	</script>
-
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-		
-		ga('create', 'UA-189000355-1', 'auto');
-		ga('send', 'pageview');
-	</script>
-	<!-- Analytics END -->   
+    <title>GoMikeDesigns | Freelance Web Developper In Atlanta</title>  
 </head>
 
 <body>
@@ -84,7 +57,7 @@
 						I'm Mike.<br />Web Developper in Atlanta.
 					</h1>
 					<div class="text-center">
-						<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+						<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact Me</a>
 					</div>
 				</div>
 			</div>
@@ -364,13 +337,40 @@
 	<!-- ScrollToTop Button END-->
 
 </div>
-<!-- Main container END -->
+	<!-- Main container END -->
 
-<script src="./js/jquery-2.1.0.js"></script>
-<script src="./js/bootstrap.js"></script>
-<script src="./js/blocs.js"></script>
-<script src="./js/jquery.touchSwipe.js"></script>
-<script src="./js/gmaps.js"></script>
+	<!-- Analytics -->
+	<script
+	async
+	src="https://www.googletagmanager.com/gtag/js?id=G-NNLTWCB64Q"
+	></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+
+	function gtag() {
+	dataLayer.push(arguments);
+	}
+	gtag("js", new Date());
+
+	gtag("config", "G-NNLTWCB64Q");
+	</script>
+
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		
+		ga('create', 'UA-189000355-1', 'auto');
+		ga('send', 'pageview');
+	</script>
+	<!-- Analytics END --> 
+
+	<script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<script src="./js/blocs.js"></script>
+	<script src="./js/jquery.touchSwipe.js"></script>
+	<script src="./js/gmaps.js"></script>
 
 </body>
 </html>
