--- a/page2.html
+++ b/page2.html
@@ -56,7 +56,7 @@
 				<nav class="navbar row">
 		
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/atlanta web design logo.png" alt="Atlanta Web Design Logo, Mike Logo" height="40" /></a>
+						<a class="navbar-brand" href="index.html"><img src="./img/atlanta-web-design-logo.webp" alt="Atlanta Web Design Logo, Mike Logo" height="40" /></a>
 		
 						<div id="nav-toggle" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only"></span> <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
