--- a/page2.html
+++ b/page2.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-	<meta name="keywords" content="">
-    <meta
-      name="description"
-      content="I'm Mike and you should hire me to build your website"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-   	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+    <meta charset="utf-8">
+    <meta name="keywords" content="GoMike Designs in Atlanta, GoMike Designs logo and web design, design your logo with help from GoMike Designs, grow your company with GoMike Designs, freelance web design in atlanta, best logo development">
+    <meta name="description" content="I'm Mike and we can partner to customize a website or logo that will build your business">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <link rel="preload" as="font" type="font/woff2" href="fonts/fontawesome-webfont.woff2?v=4.7.0" crossorigin>
+    <link rel="preload" as="font" type="font/woff" href="fonts/et-line.woff" crossorigin>
+	<link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
+	<link rel="stylesheet preload" as="style" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet preload" as="style" type="text/css" href="style.min.css">
+	<link rel="stylesheet preload" as="style" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet preload" as="style" type="text/css" href="css/et-line.min.css">
+
     <title>GoMikeDesigns | page2</title>
 
     <!-- Analytics -->
@@ -147,7 +144,13 @@
 						<h2>Write To Me</h2>
 
 						<p class="g-map">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3314.146829370866!2d-84.38024488458453!3d33.834323880665686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f50592611c7ba1%3A0x62d129b275ecff2e!2s123%20Peachtree%20Ave%20NE%2C%20Atlanta%2C%20GA%2030305%2C%20USA!5e0!3m2!1sen!2suk!4v1661898009240!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3314.146829370866!2d-84.38024488458453!3d33.834323880665686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f50592611c7ba1%3A0x62d129b275ecff2e!2s123%20Peachtree%20Ave%20NE%2C%20Atlanta%2C%20GA%2030305%2C%20USA!5e0!3m2!1sen!2suk!4v1661898009240!5m2!1sen!2suk"
+							 width="600" 
+							 height="450" 
+							 style="border:0;" 
+							 allowfullscreen="" 
+							 loading="lazy" 
+							 referrerpolicy="no-referrer-when-downgrade"></iframe>
 						</p>
 
 						<p class="col-sm-6-p">
@@ -177,7 +180,7 @@
 							<div class="text-center">
 								<a class="social" href="https://www.Twitter.com">
 									<span class="fa fa-twitter icon-md"></span>
-									<p class="social-color">Twitter</p>
+									<p class="social-name">Twitter</p>
 								</a>
 							</div>
 						</div>
@@ -185,7 +188,7 @@
 							<div class="text-center">
 								<a class="social" href="https://www.facebook.com">
 									<span class="fa fa-facebook icon-md"></span>
-									<p class="social-color">Facebook</p>
+									<p class="social-name">Facebook</p>
 								</a>
 							</div>
 						</div>
@@ -193,7 +196,7 @@
 							<div class="text-center">
 								<a class="social" href="https://www.Dribble.com">
 									<span class="fa fa-dribbble icon-md"></span>
-									<p class="social-color">Dribble</p>
+									<p class="social-name">Dribble</p>
 								</a>
 							</div>
 						</div>
@@ -201,7 +204,7 @@
 							<div class="text-center">
 								<a class="social" href="https://www.Instagram.com">
 									<span class="fa fa-instagram icon-md"></span>
-									<p class="social-color">Instagram</p>
+									<p class="social-name">Instagram</p>
 								</a>
 							</div>
 						</div>
