--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="gomikedesigns, google, website, internet, web design, design agency, logo design atlanta, Freelance web developer">
-    <meta name="description" content="GoMike Designs - Atlanta based web designer who helps businesses stand out and become more profitable, I love Atlanta">
+    <meta name="keywords" content="GoMike Designs in Atlanta, GoMike Designs logo and web design, design your logo with help from GoMike Designs, grow your company with GoMike Designs, freelance web design in atlanta, best logo development">
+    <meta name="description" content="I'm Mike and we can partner to customize a website or logo that will build your business">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<meta name="google-site-verification" content="edwEHXnB_Ysct8jBc5qIAtEOHPRXOQ3C29iws3N_Ljg">
-	<meta name="robots" content="index, follow">
-	<link rel="shortcut icon" type="image/png" href="./favicon.jpg" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-   	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+    <link rel="preload" as="font" type="font/woff2" href="fonts/fontawesome-webfont.woff2?v=4.7.0" crossorigin>
+    <link rel="preload" as="font" type="font/woff" href="fonts/et-line.woff" crossorigin>
+	<link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
+	<link rel="stylesheet preload" as="style" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet preload" as="style" type="text/css" href="style.min.css">
+	<link rel="stylesheet preload" as="style" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet preload" as="style" type="text/css" href="css/et-line.min.css">
 
     <title>GoMikeDesigns | Freelance Web Developper In Atlanta</title>  
 </head>
@@ -168,7 +168,7 @@
 			<div class="row tight-width-whitespace portfolio-row">
 				<div class="col-sm-6">
 					<a href="#" data-lightbox="./img/dog-walker.webp" data-gallery-id="gallery-1" data-caption="Website for Atlanta's Premiere dog salon" data-frame="snapshot-lb">
-						<img src="./img/dog-walker.webp" class="portfolio-thumb" width="250" height="250" alt="girl walking a dog design agency website for dog salon"/>
+						<img src="./img/dog-walker.webp" class="portfolio-thumb" width="270" height="270" alt="girl walking a dog design agency website for dog salon"/>
 					</a>
 					<h3 class="mg-md text-center">
 						Website for Atlanta's premiere Dog Sitters
@@ -185,8 +185,8 @@
 					><img
 					src="./img/cupcakes.webp"
 					class="portfolio-thumb"
-					width="250"
-					height="250"
+					width="270"
+					height="270"
 					alt="design agency website for best cupcakes in atlanta"
 				/></a>
 				<h3 class="mg-md text-center">
@@ -200,8 +200,7 @@
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<div class="col-sm-6">
-					<a
-					href="#"
+					<a href="#"
 					data-lightbox="./img/tech-items.webp"
 					data-gallery-id="gallery-1"
 					data-caption="New logo and website for Atlanta's best tech gear shop"
@@ -210,17 +209,17 @@
 					<img
 						src="./img/tech-items.webp"
 						class="portfolio-thumb"
-						width="250"
-						height="250"
+						width="270"
+						height="270"
 						alt="Tech gear shop"
 					/></a>
 					<h3 class="mg-md text-center">
-					New logo and website for Atl + Gear - Atlanta's best tech gear
-					shop
+						New logo and website for Atl + Gear - Atlanta's best tech gear
+						shop
 					</h3>
 					<p class="text-center">
-					Whenever I'm wanting to improve my web design skills, this shop
-					inspires me.
+						Whenever I'm wanting to improve my web design skills, this shop
+						inspires me.
 					</p>
 				</div>
 				<div class="col-sm-6">
@@ -233,17 +232,17 @@
 					><img
 						src="./img/atlanta-legal-client.webp"
 						class="portfolio-thumb"
-						width="250"
-						height="250"
+						width="270"
+						height="270"
 						alt=" Atlanta's legal website generates 30% more clients after web redesign"
 					/></a>
 					<h3 class="mg-md text-center">
-					Atlanta's legal new website - Generating 30% more law clients
-					with a refresh
+						Atlanta's legal new website - Generating 30% more law clients
+						with a refresh
 					</h3>
 					<p class="text-center">
-					A few months ago, I created their new website and it's bringing
-					lots of leads.
+						A few months ago, I created their new website and it's bringing
+						lots of leads.
 					</p>
 				</div>
 			</div>
@@ -281,7 +280,7 @@
 							<div class="text-center">
 								<a class="social" href="https://www.Twitter.com">
 									<span class="fa fa-twitter icon-md"></span>
-									<p class="social-color">Twitter</p>
+									<p class="social-name">Twitter</p>
 								</a>
 							</div>
 						</div>
@@ -289,7 +288,7 @@
 							<div class="text-center">
 								<a class="social" href="https://www.facebook.com">
 									<span class="fa fa-facebook icon-md"></span>
-									<p class="social-color">Facebook</p>
+									<p class="social-name">Facebook</p>
 								</a>
 							</div>
 						</div>
@@ -297,7 +296,7 @@
 							<div class="text-center">
 								<a class="social" href="https://www.Dribble.com">
 									<span class="fa fa-dribbble icon-md"></span>
-									<p class="social-color">Dribble</p>
+									<p class="social-name">Dribble</p>
 								</a>
 							</div>
 						</div>
@@ -305,7 +304,7 @@
 							<div class="text-center">
 								<a class="social" href="https://www.Instagram.com">
 									<span class="fa fa-instagram icon-md"></span>
-									<p class="social-color">Instagram</p>
+									<p class="social-name">Instagram</p>
 								</a>
 							</div>
 						</div>
