--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
             <a href="#" data-lightbox="img/2_1.webp" data-gallery-id="gallery-1"
               data-caption="web redesign for the best cupcakes in Atlanta" data-frame="snapshot-lb"><img
                 src="img/2_1.webp" class="img-responsive portfolio-thumb center-img photo" alt="web redesign cupcakes"
-                width="270" height="270" loading=lazy /></a>
+                width="270" height="270" loading=lazy />
+              </a>
             <h3 class="mg-md text-center title-img">
               Web redesign for the best Atlanta cupcakes</h3>
             <p class="text-center">
@@ -292,48 +293,6 @@
                 </div>
               </div>
             </div>
-            <div class="row">
-							<div class="col-sm-4">
-								<h3 class="ftr-ul-hdr">Partners</h3>
-								<ul>
-                  <li><a class="tc-white" href="car.com">car.com</a></li>
-									<li><a class="tc-white" href="pizza.com">pizza.com</a></li>
-									<li><a class="tc-white" href="myroof.com">myroof.com</a></li>
-									<li><a class="tc-white" href="realestateseo.com">realestateseo.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								<h3 class="ftr-ul-hdr">Directories 1</h3>
-								<ul>
-									<li><a class="tc-white" href="agencydirectory.com">agencydirectory.com</a></li>
-									<li><a class="tc-white" href="seodirectory.com">seodirectory.com</a></li>
-									<li><a class="tc-white" href="marketingdirectory.com">marketingdirectory.com</a>
-									</li>
-									<li><a class="tc-white" href="123seo.com">123seo.com</a></li>
-									<li><a class="tc-white" href="123site.com">123site.com</a></li>
-									<li><a class="tc-white" href="wordpressdirectory.com">wordpressdirectory.com</a>
-									</li>
-									<li><a class="tc-white" href="agencylistatl.com">agencylistatl.com</a></li>
-									<li><a class="tc-white" href="bestagencyatl.com">bestagencyatl.com</a></li>
-									<li><a class="tc-white" href="seolist.com">seolist.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								<h3 class="ftr-ul-hdr">Directories 2</h3>
-								<ul>
-									<li><a class="tc-white" href="betterseo.com">betterseo.com</a></li>
-									<li><a class="tc-white" href="yesseo.com">yesseo.com</a></li>
-									<li><a class="tc-white" href="seojuicelink.com">seojuicelink.com</a></li>
-									<li><a class="tc-white" href="bestlinks.com">bestlinks.com</a></li>
-									<li><a class="tc-white" href="linkalot.com">linkalot.com</a></li>
-									<li><a class="tc-white" href="backlink.com">backlink.com</a></li>
-									<li><a class="tc-white" href="linkjuicedirectory.com">linkjuicedirectory.com</a>
-									</li>
-									<li><a class="tc-white" href="rankongoogle.com">rankongoogle.com</a></li>
-									<li><a class="tc-white" href="trustedseo.com">trustedseo.com</a></li>
-								</ul>
-							</div>
-						</div>
           </div>
         </div>
       </div>
